fiqa-extended-ds

--- a/dev/web_scrapper/link_scrapper.ipynb
+++ b/dev/web_scrapper/link_scrapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "[10753 rows x 4 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -580,14 +580,12 @@
        "49  {\"Mecklai Financial\": \"neutral\", \"Rupee\": \"neu...  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# df = df.drop(df.columns[1], axis=1)\n",
-    "# df = df.drop(df.columns[3], axis=1)\n",
     "df = df.drop(df.columns[0], axis=1)\n",
     "df = df.drop(df.columns[2], axis=1)\n",
     "df = df[start:end]\n",
@@ -597,68 +595,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Oil prices turn mixed in Asian trade'\n",
-      " 'Put OI concentration at 6000 shows support'\n",
-      " 'OBC may go for FPO post-capital infusion' 'NTPC files for FPO'\n",
-      " 'NSEL appoints five new independent directors'\n",
-      " 'NSE sees senior level changes'\n",
-      " 'NSE operationalises SME platform with first listing'\n",
-      " 'Options suggest range of 8,000-8,300 for NSE'\n",
-      " 'NSE directs brokers to implement risk reduction mode'\n",
-      " 'NSE to begin overnight investment facility from Monday'\n",
-      " 'Nomura sees Sensex at 33,500 by year-end'\n",
-      " 'Nothing alarming about Nifty level: Deepak Mohoni, trendwatchindia.com'\n",
-      " 'Nifty likely to trade in 7500-7700 range'\n",
-      " 'Nifty will revisit 7930-7940 levels: Mitesh Thacker'\n",
-      " \"Today's Bet: 5100-5300 level crucial for Nifty\"\n",
-      " '5450-5500 is possible on Nifty: Aptart Technical Services'\n",
-      " 'Immediate target for Nifty at 7,935-7,940: Mitesh Thacker'\n",
-      " 'Nifty may retest levels of 8000: Mitesh Thacker'\n",
-      " 'Nifty might consolidate between 8950-8980 levels: Mitesh Thacker'\n",
-      " 'Nifty to find next support at 5950 level'\n",
-      " 'Nifty50 to find support at 7,950-7,930: Mitesh Thacker'\n",
-      " 'Pre-market: Nifty seen opening flat; Economic Survey eyed'\n",
-      " 'Pre-market: Nifty seen opening flat; may reclaim 8800'\n",
-      " 'See Nifty heading towards 5180-5150 levels: Ashwani Gujral'\n",
-      " 'NHPC: Timely completion of projects crucial for company'\n",
-      " 'Network18 names Anuj Gandhi as Group distribution director'\n",
-      " 'Should you buy Nestle India now?'\n",
-      " 'T Nandakumar to be appointed NDDB Chairman'\n",
-      " 'NCDEX mulls relaunch of Brent contract soon'\n",
-      " \"Exporters, traders flock to NCDEX's forwards segment\"\n",
-      " 'NCDEX launches new membership category for forwards segment'\n",
-      " 'NCDEX spot turnover may reach Rs 7,000 crore'\n",
-      " 'Nasdaq eyes running dark pools for banks: WSJ'\n",
-      " 'Nasdaq Record: Then and Now'\n",
-      " 'MTS appoints heads of Karnataka, UP (West) circles'\n",
-      " 'Kuldip Singh named new CMD of MTNL'\n",
-      " 'D-Street shakeup may be triggered by MSCI rejig'\n",
-      " 'MRPL records Rs 406 crore net profit'\n",
-      " 'For Mphasis, watch for 345-350 level: Ashwani Gujral'\n",
-      " 'Moser Baer postpones bondholders meet on debt restructuring'\n",
-      " 'Centre, states gear up for MOIL offer'\n",
-      " 'Mini Indian Rupee futures launched in Dubai'\n",
-      " 'MindTree board accepts Sootas resignation'\n",
-      " 'Microsoft is tuning its phones for India coverage'\n",
-      " 'Mercedes India appoints new heads for sales, marketing'\n",
-      " \"MEP Infrastructure's Rs 324 crore IPO opens tomorrow\"\n",
-      " 'July 1, 2014: Mecklai Financial report on Rupee'\n",
-      " 'July 10, 2014: Mecklai Financial report on Rupee'\n",
-      " 'July 16, 2014: Mecklai Financial report on Rupee'\n",
-      " 'July 31, 2014: Mecklai Financial report on Rupee']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "titles = df['Title'].values[:end-start]\n",
-    "print(titles)"
+    "len(titles)"
    ]
   },
   {
@@ -1180,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1190,7 +1143,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sources = []\n",
+    "\n",
+    "# from urllib.parse import urlparse\n",
+    "\n",
+    "# for i in range(len(df.index)):\n",
+    "#     domain = urlparse(df['links'][i]).netloc\n",
+    "#     sources.append(domain)\n",
+    "\n",
+    "# df['source'] = pd.Series(sources)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,6 +1179,24 @@
     "#    df.to_csv('links_fiqa.csv', header='column_names', index=False)\n",
     "# else: # else it exists so append without writing the header\n",
     "#    df.to_csv('links_fiqa.csv', mode='a', header=False, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reorder columns of df and create final dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# columns_titles = [\"title\",\"body\", \"links\", \"source\", \"target\", \"sentiment_score\"]\n",
+    "# df=df.reindex(columns=columns_titles)\n",
+    "# df"
    ]
   }
  ],
