--- a/dev/ryk.ipynb
+++ b/dev/ryk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,18 +27,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>body</th>\n",
+       "      <th>links</th>\n",
+       "      <th>source</th>\n",
+       "      <th>target</th>\n",
+       "      <th>sentiment_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>title</td>\n",
+       "      <td>body</td>\n",
+       "      <td>links</td>\n",
+       "      <td>source</td>\n",
+       "      <td>target</td>\n",
+       "      <td>sentiment_score</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Dairy Crest loses a third of Morrisons milk co...</td>\n",
+       "      <td>(Reuters) - Dairy Crest Group Plc DCG.L lost a...</td>\n",
+       "      <td>https://www.reuters.com/article/uk-dairy-crest...</td>\n",
+       "      <td>www.reuters.com</td>\n",
+       "      <td>Morrisons</td>\n",
+       "      <td>-0.161</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Pearson expects to return to growth this year</td>\n",
+       "      <td>LONDON (Reuters) - Pearson PSON.L said it expe...</td>\n",
+       "      <td>https://www.reuters.com/article/uk-pearson-res...</td>\n",
+       "      <td>www.reuters.com</td>\n",
+       "      <td>Pearson</td>\n",
+       "      <td>0.446</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0                                              title   \n",
+       "1  Dairy Crest loses a third of Morrisons milk co...   \n",
+       "2      Pearson expects to return to growth this year   \n",
+       "\n",
+       "                                                body  \\\n",
+       "0                                               body   \n",
+       "1  (Reuters) - Dairy Crest Group Plc DCG.L lost a...   \n",
+       "2  LONDON (Reuters) - Pearson PSON.L said it expe...   \n",
+       "\n",
+       "                                               links           source  \\\n",
+       "0                                              links           source   \n",
+       "1  https://www.reuters.com/article/uk-dairy-crest...  www.reuters.com   \n",
+       "2  https://www.reuters.com/article/uk-pearson-res...  www.reuters.com   \n",
+       "\n",
+       "      target  sentiment_score  \n",
+       "0     target  sentiment_score  \n",
+       "1  Morrisons           -0.161  \n",
+       "2    Pearson            0.446  "
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "path = '../dataset/finRep/FinancialPhraseBank/all-data.csv'\n",
-    "df = pd.read_csv(path, encoding = \"ISO-8859-1\", names = ['sentiment', 'sentence'])\n",
-    "# print(df[:10])"
+    "# path = '../dataset/finRep/FinancialPhraseBank/all-data.csv'\n",
+    "# df = pd.read_csv(path, encoding = \"ISO-8859-1\", names = ['sentiment', 'sentence'])\n",
+    "# # print(df[:10])\n",
+    "path = '../dataset/finRep/FiQA/fiqa_extended.csv'\n",
+    "df = pd.read_csv(path, encoding = \"ISO-8859-1\", names = ['title', 'body','links','source','target','sentiment_score'])\n",
+    "df[:3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,30 +145,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Net interest income totaled EUR 15.9 mn , compared to EUR 15.6 mn a year earlier .\n",
-      "the sentiment is : negative\n"
+      "WASHINGTON Reuters AstraZeneca Plcs diabetes drug Onglyza and Takeda Pharmaceutical Co.s rival product Nesina should carry information about the risk of heart failure, an advisory committee to the U.S. Food and Drug Administration said on Tuesday.Heart failure is a condition in which the heart cannot pump enough blood to meet the bodys needs. It can be caused by coronary artery disease, high blood pressure, diabetes or obesity, according to the Mayo Clinic.The panel reviewed safety data on AstraZenecas Onglyza and Takedas Nesina. The drugs belong to a class known as DPP4 inhibitors which also includes Merck Co.s Januvia. Januvia data from a trial known as TECOS will be presented at a scientific meeting in June.The studies were requested by the FDA as part of a broader investigation into the safety of diabetes drugs. In December 2008, the agency issued guidance requiring companies to conduct studies to show the drugs did not increase cardiovascular risk.The panel found that neither Onglyza nor Nesina increased the risk of cardiovascular death, stroke or heart attack. But data showed a statistically significant increase in the risk of heart failure with Onglyza and an increased risk with Nesina that did not reach statistical significance.Some panelists said that even though the heart failure risk seen with Nesina was modest, they suspect the risk will turn out to be a DPP4 class effect and therefore worth including.The panel did not recommend any restrictions on prescribing the drugs. AstraZenecas U.S. shares rose 3.2 percent. Takedas shares closed down 0.67 percent before the vote was announced. Mercks shares rose 1.8 percent.Given the absence of a serious safety issue for either Onglyza or Takedas Nesina suggests that, barring an overtly negative signal in TECOS, growth of the DPP4 class is likely to continue without a meaningful change in current prescribing trends, Leerink analyst Seamus Fernandez said in a research note.A preliminary FDA review of Onglyza published on Friday found an increase in the rate of death from all causes. Panel members said they were moderately concerned about the signal but said their concern was muted by the fact that the causes of death were varied and lacked any common theme.Onglyza, known also as saxagliptin, was approved in 2009. Nesina, or alogliptin, was approved in 2013. The FDA is not obliged to follow the advice of its advisory panels but typically does so.\n",
+      "the sentiment is : 0.334\n"
      ]
     }
    ],
    "source": [
-    "# choose a random sample\n",
-    "text = df.sample(1)['sentence'].iloc[0]\n",
-    "label = df.sample(1)['sentiment'].iloc[0]\n",
-    "# text = \"you are not good at trading \"\n",
+    "import re\n",
+    "\n",
+    "text = df.sample(1).iloc[0]['body']\n",
+    "text = re.sub(r'[^A-Za-z0-9 .,;]+', '', text)\n",
+    "text = re.sub(' +', ' ', text)\n",
+    "# df =df.drop(index = 0)\n",
+    "    # df[:3]\n",
     "print(text)\n",
+    "label = df.sample(1)['sentiment_score'].iloc[0]\n",
+    "\n",
     "print(\"the sentiment is : %s\"%label)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['net interest income totaled eur 15', 'eur 15', 'year earlier', '9 mn', '6 mn', 'compared']\n"
+      "['washington reuters astrazeneca plcs diabetes drug onglyza', 'agency issued guidance requiring companies', 'leerink analyst seamus fernandez said', 'heart cannot pump enough blood', 'mercks shares rose 1', 'also includes merck co', 'panel reviewed safety data', 'heart failure risk seen', 'drug administration said', 'high blood pressure', 'shares rose 3', 'takeda pharmaceutical co', 'therefore worth including', 'takedas shares closed', 'reach statistical significance', 'coronary artery disease', 'serious safety issue', 'statistically significant increase', 'panel members said', 'overtly negative signal', 'current prescribing trends', 'rival product nesina', 'preliminary fda review', 'dpp4 class effect', 'takedas nesina suggests', 'increase cardiovascular risk', 'heart failure', 'heart failure', 'heart failure', 'known also', 'heart attack', 'diabetes drugs', 'panelists said', 'dpp4 class', 'data showed', 'takedas nesina', 'panel found', 'onglyza published', 'neither onglyza', 'either onglyza', 'astrazenecas onglyza', 'dpp4 inhibitors', 'class known', 'januvia data', 'trial known', 'scientific meeting', 'research note', 'moderately concerned', 'meaningful change', 'mayo clinic', 'friday found', 'even though', 'december 2008', 'continue without', 'common theme', 'carry information', 'broader investigation', 'bodys needs', 'advisory panels', 'advisory committee', '8 percent', '67 percent', '2 percent', 'nesina increased', 'increased risk', 'cardiovascular death', 'drugs belong', 'conduct studies', 'astrazenecas u', 'diabetes', 'said', 'safety', 'panel', 'onglyza', 'onglyza', 'increase', 'signal', 'prescribing', 'risk', 'risk', 'risk', 'risk', 'nesina', 'nesina', 'nesina', 'fda', 'fda', 'u', 'studies', 'januvia', 'drugs', 'drugs', 'death', 'death', 'vote', 'varied', 'typically', 'turn', 'tuesday', 'tecos', 'tecos', 'suspect', 'stroke', 'show', 'saxagliptin', 'restrictions', 'requested', 'recommend', 'rate', 'presented', 'part', 'obliged', 'obesity', 'muted', 'modest', 'meet', 'likely', 'lacked', 'june', 'growth', 'given', 'food', 'follow', 'fact', 'condition', 'concern', 'causes', 'causes', 'caused', 'barring', 'approved', 'approved', 'announced', 'alogliptin', 'advice', 'according', 'absence', '2013', '2009', '0']\n"
      ]
     }
    ],
@@ -119,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,14 +246,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['income totaled eur', 'mn year earlier', '15', 'net', 'compared']\n"
+      "['diabetes drug onglyza', 'heart failure risk', 'takedas shares closed', 'dpp4 class effect', 'panels']\n"
      ]
     }
    ],
@@ -171,14 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['income totaled EUR', 'Net interest income', 'interest income totaled', 'totaled EUR', 'Net interest', 'year earlier', 'compared to EUR', 'interest income', 'income totaled', 'EUR', 'Net', 'compared', 'earlier', 'interest', 'income', 'totaled', 'year']\n"
+      "['WASHINGTON Reuters AstraZeneca', 'Reuters AstraZeneca Plcs', 'WASHINGTON Reuters', 'Plcs diabetes drug', 'AstraZeneca Plcs diabetes', 'rival product Nesina', 'Pharmaceutical Co.s rival', 'diabetes drug Onglyza', 'Takeda Pharmaceutical', 'Plcs diabetes', 'Drug Administration', 'Reuters AstraZeneca', 'AstraZeneca Plcs', 'Takedas Nesina', 'Nesina', 'Onglyza', 'rival product', 'carry information', 'meet the bodys', 'product Nesina']\n"
      ]
     }
    ],
@@ -208,16 +304,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rake: ['net interest income totaled eur 15', 'eur 15', 'year earlier', '9 mn', '6 mn', 'compared']\n",
-      "Keybert: ['income totaled eur', 'mn year earlier', '15', 'net', 'compared']\n",
-      "Yake: ['income totaled EUR', 'Net interest income', 'interest income totaled', 'totaled EUR', 'Net interest', 'year earlier', 'compared to EUR', 'interest income', 'income totaled', 'EUR', 'Net', 'compared', 'earlier', 'interest', 'income', 'totaled', 'year']\n"
+      "Rake: ['washington reuters astrazeneca plcs diabetes drug onglyza', 'agency issued guidance requiring companies', 'leerink analyst seamus fernandez said', 'heart cannot pump enough blood', 'mercks shares rose 1', 'also includes merck co', 'panel reviewed safety data', 'heart failure risk seen', 'drug administration said', 'high blood pressure', 'shares rose 3', 'takeda pharmaceutical co', 'therefore worth including', 'takedas shares closed', 'reach statistical significance', 'coronary artery disease', 'serious safety issue', 'statistically significant increase', 'panel members said', 'overtly negative signal', 'current prescribing trends', 'rival product nesina', 'preliminary fda review', 'dpp4 class effect', 'takedas nesina suggests', 'increase cardiovascular risk', 'heart failure', 'heart failure', 'heart failure', 'known also', 'heart attack', 'diabetes drugs', 'panelists said', 'dpp4 class', 'data showed', 'takedas nesina', 'panel found', 'onglyza published', 'neither onglyza', 'either onglyza', 'astrazenecas onglyza', 'dpp4 inhibitors', 'class known', 'januvia data', 'trial known', 'scientific meeting', 'research note', 'moderately concerned', 'meaningful change', 'mayo clinic', 'friday found', 'even though', 'december 2008', 'continue without', 'common theme', 'carry information', 'broader investigation', 'bodys needs', 'advisory panels', 'advisory committee', '8 percent', '67 percent', '2 percent', 'nesina increased', 'increased risk', 'cardiovascular death', 'drugs belong', 'conduct studies', 'astrazenecas u', 'diabetes', 'said', 'safety', 'panel', 'onglyza', 'onglyza', 'increase', 'signal', 'prescribing', 'risk', 'risk', 'risk', 'risk', 'nesina', 'nesina', 'nesina', 'fda', 'fda', 'u', 'studies', 'januvia', 'drugs', 'drugs', 'death', 'death', 'vote', 'varied', 'typically', 'turn', 'tuesday', 'tecos', 'tecos', 'suspect', 'stroke', 'show', 'saxagliptin', 'restrictions', 'requested', 'recommend', 'rate', 'presented', 'part', 'obliged', 'obesity', 'muted', 'modest', 'meet', 'likely', 'lacked', 'june', 'growth', 'given', 'food', 'follow', 'fact', 'condition', 'concern', 'causes', 'causes', 'caused', 'barring', 'approved', 'approved', 'announced', 'alogliptin', 'advice', 'according', 'absence', '2013', '2009', '0']\n",
+      "Keybert: ['diabetes drug onglyza', 'heart failure risk', 'takedas shares closed', 'dpp4 class effect', 'panels']\n",
+      "Yake: ['WASHINGTON Reuters AstraZeneca', 'Reuters AstraZeneca Plcs', 'WASHINGTON Reuters', 'Plcs diabetes drug', 'AstraZeneca Plcs diabetes', 'rival product Nesina', 'Pharmaceutical Co.s rival', 'diabetes drug Onglyza', 'Takeda Pharmaceutical', 'Plcs diabetes', 'Drug Administration', 'Reuters AstraZeneca', 'AstraZeneca Plcs', 'Takedas Nesina', 'Nesina', 'Onglyza', 'rival product', 'carry information', 'meet the bodys', 'product Nesina']\n"
      ]
     }
    ],
@@ -240,14 +336,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['income totaled eur', 'mn year earlier', '15', 'net', 'compared']\n"
+      "['stonesoft', 'simplify network security', 'global provider proven', 'management', 'generation solutions simplify']\n"
      ]
     }
    ],
@@ -257,14 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[('income', 0), ('totaled', 0), ('eur', 0)], [('mn', 0), ('year', 0), ('earlier', 0)], [('15', 0)], [('net', 0)], [('compared', 0)]]\n"
+      "[[('stonesoft', 0)], [('simplify', 0), ('network', 0), ('security', 0)], [('global', 0), ('provider', 0), ('proven', 0)], [('management', 0)], [('generation', 0), ('solutions', 0), ('simplify', 0)]]\n"
      ]
     }
    ],
@@ -299,14 +395,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[('income', 0), ('totaled', 0), ('eur', 0)], [('mn', 0), ('year', 0), ('earlier', 0)], [('15', 0)], [('net', 0)], [('compared', 0)]]\n"
+      "[[('stonesoft', 0)], [('simplify', 0), ('network', 0), ('security', 0)], [('global', 0), ('provider', 0), ('proven', 0)], [('management', 0)], [('generation', 0), ('solutions', 0), ('simplify', 0)]]\n"
      ]
     }
    ],
@@ -338,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,14 +456,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[('income', 0), ('totaled', 0), ('eur', 0)], [('mn', 0), ('year', 0), ('earlier', 0)], [('15', 0)], [('net', 0)], [('compared', 0)]]\n"
+      "[[('stonesoft', 0)], [('simplify', 0), ('network', 0), ('security', 0)], [('global', 0), ('provider', 0), ('proven', 0)], [('management', 0)], [('generation', 0), ('solutions', 0), ('simplify', 0)]]\n"
      ]
     }
    ],
@@ -379,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +504,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['income totaled eur', 'net interest income totaled eur 15', 'year earlier', 'compared', 'mn year earlier', '15']\n"
+      "['simplify network security management', 'stonesoft', 'next generation solutions', 'global provider', 'proven', 'simplify network security', 'global provider proven', 'management', 'generation solutions simplify']\n"
      ]
     }
    ],
@@ -429,6 +525,13 @@
     "            if word2.similarity(word1) > 0.7 and not(keybert in FinalKeys):\n",
     "                FinalKeys.append(keybert)\n",
     "print(FinalKeys)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PREPROCESSING"
    ]
   }
  ],
