setiment dataset&word comparison

--- a/dev/web_scrapper/web_scrapper.ipynb
+++ b/dev/web_scrapper/web_scrapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_path():\n",
-    "    path = './links_sentfin.csv'\n",
+    "    path = './links_sentfin_old.csv'\n",
     "    df = pd.read_csv(path, encoding = \"ISO-8859-1\")\n",
     "    return df"
    ]
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "Name: source, dtype: int64"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "20"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,64 +297,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/ipykernel_launcher.py:20: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
-      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/ipykernel_launcher.py:21: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "se termino hasta:  200\n",
-      "se termino hasta:  220\n",
-      "se termino hasta:  240\n",
-      "se termino hasta:  260\n",
-      "se termino hasta:  280\n",
-      "se termino hasta:  300\n",
-      "se termino hasta:  320\n",
-      "se termino hasta:  340\n",
-      "se termino hasta:  360\n",
       "se termino hasta:  380\n",
       "se termino hasta:  400\n",
       "se termino hasta:  420\n",
       "se termino hasta:  440\n",
       "se termino hasta:  460\n",
-      "se termino hasta:  480\n",
-      "se termino hasta:  500\n",
-      "se termino hasta:  520\n",
-      "se termino hasta:  540\n",
-      "se termino hasta:  560\n",
-      "se termino hasta:  580\n",
-      "se termino hasta:  600\n",
-      "se termino hasta:  620\n",
-      "se termino hasta:  640\n",
-      "se termino hasta:  660\n",
-      "se termino hasta:  680\n",
-      "se termino hasta:  700\n",
-      "se termino hasta:  720\n",
-      "se termino hasta:  740\n",
-      "se termino hasta:  760\n",
-      "se termino hasta:  780\n",
-      "se termino hasta:  800\n",
-      "se termino hasta:  820\n",
-      "se termino hasta:  840\n",
-      "se termino hasta:  860\n",
-      "se termino hasta:  880\n",
-      "se termino hasta:  900\n",
-      "se termino hasta:  920\n",
-      "se termino hasta:  940\n",
-      "se termino hasta:  960\n",
-      "se termino hasta:  980\n",
-      "se termino hasta:  1000\n",
-      "se termino hasta:  1020\n",
-      "se termino hasta:  1040\n"
+      "se termino hasta:  480\n"
      ]
     }
    ],
@@ -366,8 +321,8 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "from time import sleep\n",
-    "start = 580\n",
-    "for end in range(200,1046,20):\n",
+    "start = 360\n",
+    "for end in range(380,500,20):\n",
     "    path_is = get_path()\n",
     "    # print(\"path_is = \", path_is)\n",
     "    arreglo = arrange(path_is)\n",
